--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -4,10 +4,7 @@
     min-height: calc(100vh - 4.25rem);
     @include flex-center;
     overflow: hidden;
-
-    @include breakpoint(phone768) {
-        padding: length(48) length(0);
-    }
+    padding: length(48) length(0);
 
     &-content {
         @include flex-column;
